src/main/java/com/example/auctionwebapp/userManagement/common/error/ErrorResponse.java
package com.example.auctionwebapp.userManagement.common.error;

public class ErrorResponse {
}
